--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-h1,h2 {
-    color: green;
+body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+h1,h2 {
+    color: green; 
 }
 
 h1 {
