--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ h2 {
     font-size: 25px;
 }
 
-p {
+/* p {
     text-align: justify;
+} */
+
+.main-text {
+    text-align: justify;
+}
+
+#author-text {
+    font-size: 22px;
 }
