--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -8,10 +14,12 @@ h1,h2 {
 
 h1 {
     font-size: 40px;
+    margin-bottom: 20px;
 }
 
 h2 {
     font-size: 25px;
+    margin-bottom: 10px;
 }
 
 /* p {
@@ -20,6 +28,7 @@ h2 {
 
 .main-text {
     text-align: justify;
+    margin-bottom: 20px;
 }
 
 #author-text {
