--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -26,9 +32,31 @@ h2 {
     text-align: justify;
 } */
 
+.container {
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blog-post {
+    background-color: blue;
+    width: 75%;
+    float: left;
+}
+
+.other-posts {
+    background-color: #00ff00;
+    width: 25%;
+    float: left;
+}
+
 .main-text {
     text-align: justify;
     margin-bottom: 20px;
+}
+
+.author-box {
+    background-color: #ffff00;
 }
 
 #author-text {
