--- a/style.css
+++ b/style.css
@@ -34,18 +34,19 @@ h2 {
 
 .container {
     width: 1140px;
-    margin-left: auto;
+    /* margin-left: auto;
     margin-right: auto;
+    margin-top: 20px; */
+    margin: 20px auto 0 auto;
 }
 
 .blog-post {
-    background-color: blue;
     width: 75%;
     float: left;
+    padding-right: 30px;
 }
 
 .other-posts {
-    background-color: #00ff00;
     width: 25%;
     float: left;
 }
@@ -56,7 +57,8 @@ h2 {
 }
 
 .author-box {
-    background-color: #ffff00;
+    border-top: 1px solid grey;
+    padding-top: 20px;
 }
 
 #author-text {
