--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h2 {
 .main-text {
     text-align: justify;
     margin-bottom: 20px;
+
 }
 
 .author-box {
@@ -61,6 +62,25 @@ h2 {
     padding-top: 20px;
 }
 
+.other {
+    margin-bottom: 40px;
+}
+
+.author-box img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    float: left;
+}
+
+.blog-post img {
+    height: 300px;
+    width: auto;
+}
+
 #author-text {
     font-size: 22px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 10px;
 }
