--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h2 {
     width: 75%;
     float: left;
     padding-right: 30px;
+    position: relative;
 }
 
 .other-posts {
@@ -83,4 +84,10 @@ h2 {
     float: left;
     margin-top: 30px;
     margin-left: 10px;
+}
+
+.date {
+    position: absolute;
+    top: 10px;
+    right: 30px;
 }
